Update_feedback_link_to_ijaiofeedback

--- a/pilot/index.html
+++ b/pilot/index.html
@@ -725,7 +725,7 @@
                     <strong>(free plan available)</strong> for building the mathematical foundations in AI learning.
                 </p>
                 <p style="margin-bottom: 0; color: #555; font-style: italic;">
-                    Come across a student-friendly learning resource on AI? Suggest at <a href="https://computing.sg/goto/njaiofeedback" target="_blank" class="footer-link" style="color: #1976D2; font-weight: 600;">https://computing.sg/goto/njaiofeedback</a> 
+                    Come across a student-friendly learning resource on AI? Suggest at <a href="https://computing.sg/goto/ijaiofeedback" target="_blank" class="footer-link" style="color: #1976D2; font-weight: 600;">https://computing.sg/goto/ijaiofeedback</a> 
                     and we will acknowledge your contribution(s)! 😊
                 </p>
             </div>
