fix-link-overflow

--- a/pilot/index.html
+++ b/pilot/index.html
@@ -119,6 +119,11 @@
             font-size: 1.2rem;
             box-shadow: 0 5px 15px rgba(0,0,0,0.2);
             transition: transform 0.3s, box-shadow 0.3s;
+            max-width: 100%;
+            overflow-wrap: break-word;
+            word-wrap: break-word;
+            word-break: break-all;
+            text-align: center;
         }
 
         .pilot-btn:hover {
@@ -503,7 +508,8 @@
         }
 
         .external-resources a {
-            word-break: break-word;
+            word-break: break-all;
+            overflow-wrap: break-word;
             display: inline-block;
             max-width: 100%;
         }
@@ -742,7 +748,7 @@
             <p style="color: white; font-size: 1.3rem; font-weight: 600; margin-bottom: 25px;">
                 Join thousands of students in developing your AI literacy and competencies!
             </p>
-            <a href="https://computing.sg/goto/ijaiopilot" target="_blank" style="display: inline-block; background: white; color: #ff6b6b; padding: 15px 40px; font-size: 1.4rem; font-weight: 700; text-decoration: none; border-radius: 50px; box-shadow: 0 8px 25px rgba(0,0,0,0.2); transition: all 0.3s ease; text-transform: uppercase; letter-spacing: 1px;">
+            <a href="https://computing.sg/goto/ijaiopilot" target="_blank" style="display: inline-block; background: white; color: #ff6b6b; padding: 15px 40px; font-size: 1.4rem; font-weight: 700; text-decoration: none; border-radius: 50px; box-shadow: 0 8px 25px rgba(0,0,0,0.2); transition: all 0.3s ease; text-transform: uppercase; letter-spacing: 1px; max-width: 100%; overflow-wrap: break-word; word-break: break-all;">
                 <i class="fas fa-rocket" style="margin-right: 10px;"></i>
                 https://computing.sg/goto/ijaiopilot
             </a>
